# FifoIPCBenchmark

./: .cproject  .project  CMakeLists.txt  README.md
python/: dist_individual.py  heatmap_avg.py  histogram_individual.py  latency_analyser.py  throughput_comparison_interccx.py  throughput_comparison_intersocket.py  throughput_comparison_intraccx.py  throughput_comparison_intracore.py  throughput_plot.py
src/: benchmark.hpp  core_to_core.hpp  cxxopts.hpp  fifo.hpp  memcpy.hpp  test_latency.cpp  test_throughput.cpp  throughput_threads.hpp
tools/: configure_builds.sh
